@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -21,16 +21,20 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 
+import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.config.BeanPostProcessor;
 import org.springframework.boot.actuate.autoconfigure.endpoint.EndpointAutoConfiguration;
+import org.springframework.boot.actuate.autoconfigure.endpoint.jackson.JacksonEndpointAutoConfiguration;
 import org.springframework.boot.actuate.autoconfigure.endpoint.web.WebEndpointAutoConfiguration;
 import org.springframework.boot.actuate.autoconfigure.endpoint.web.reactive.WebFluxEndpointManagementContextConfiguration;
 import org.springframework.boot.actuate.autoconfigure.endpoint.web.servlet.WebMvcEndpointManagementContextConfiguration;
+import org.springframework.boot.actuate.endpoint.jackson.EndpointObjectMapper;
+import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
 import org.springframework.boot.autoconfigure.context.PropertyPlaceholderAutoConfiguration;
 import org.springframework.boot.autoconfigure.http.HttpMessageConvertersAutoConfiguration;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
@@ -38,8 +42,8 @@ import org.springframework.boot.autoconfigure.web.reactive.HttpHandlerAutoConfig
 import org.springframework.boot.autoconfigure.web.reactive.WebFluxAutoConfiguration;
 import org.springframework.boot.autoconfigure.web.servlet.DispatcherServletAutoConfiguration;
 import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Import;
 import org.springframework.restdocs.operation.preprocess.ContentModifyingOperationPreprocessor;
 import org.springframework.restdocs.operation.preprocess.OperationPreprocessor;
 import org.springframework.restdocs.payload.FieldDescriptor;
@@ -55,16 +59,12 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWit
  *
  * @author Andy Wilkinson
  */
-@TestPropertySource(properties = { "spring.jackson.serialization.indent_output=true",
-		"management.endpoints.web.exposure.include=*",
-		"spring.jackson.default-property-inclusion=non_null" })
+@TestPropertySource(properties = { "management.endpoints.web.exposure.include=*" })
 public abstract class AbstractEndpointDocumentationTests {
 
-	protected String describeEnumValues(Class<? extends Enum<?>> enumType) {
-		return StringUtils
-				.collectionToDelimitedString(Stream.of(enumType.getEnumConstants())
-						.map((constant) -> "`" + constant.name() + "`")
-						.collect(Collectors.toList()), ", ");
+	protected static String describeEnumValues(Class<? extends Enum<?>> enumType) {
+		return StringUtils.collectionToDelimitedString(
+				Stream.of(enumType.getEnumConstants()).map((constant) -> "`" + constant.name() + "`").toList(), ", ");
 	}
 
 	protected OperationPreprocessor limit(String... keys) {
@@ -74,28 +74,23 @@ public abstract class AbstractEndpointDocumentationTests {
 	@SuppressWarnings("unchecked")
 	protected <T> OperationPreprocessor limit(Predicate<T> filter, String... keys) {
 		return new ContentModifyingOperationPreprocessor((content, mediaType) -> {
-			ObjectMapper objectMapper = new ObjectMapper()
-					.enable(SerializationFeature.INDENT_OUTPUT);
+			ObjectMapper objectMapper = new ObjectMapper().enable(SerializationFeature.INDENT_OUTPUT);
 			try {
 				Map<String, Object> payload = objectMapper.readValue(content, Map.class);
 				Object target = payload;
 				Map<Object, Object> parent = null;
 				for (String key : keys) {
-					if (target instanceof Map) {
-						parent = (Map<Object, Object>) target;
-						target = parent.get(key);
-					}
-					else {
+					if (!(target instanceof Map)) {
 						throw new IllegalStateException();
 					}
+					parent = (Map<Object, Object>) target;
+					target = parent.get(key);
 				}
 				if (target instanceof Map) {
-					parent.put(keys[keys.length - 1],
-							select((Map<String, Object>) target, filter));
+					parent.put(keys[keys.length - 1], select((Map<String, Object>) target, filter));
 				}
 				else {
-					parent.put(keys[keys.length - 1],
-							select((List<Object>) target, filter));
+					parent.put(keys[keys.length - 1], select((List<Object>) target, filter));
 				}
 				return objectMapper.writeValueAsBytes(payload);
 			}
@@ -106,37 +101,51 @@ public abstract class AbstractEndpointDocumentationTests {
 	}
 
 	protected FieldDescriptor parentIdField() {
-		return fieldWithPath("contexts.*.parentId")
-				.description("Id of the parent application context, if any.").optional()
-				.type(JsonFieldType.STRING);
+		return fieldWithPath("contexts.*.parentId").description("Id of the parent application context, if any.")
+			.optional()
+			.type(JsonFieldType.STRING);
 	}
 
 	@SuppressWarnings("unchecked")
-	private <T> Map<String, Object> select(Map<String, Object> candidates,
-			Predicate<T> filter) {
+	private <T> Map<String, Object> select(Map<String, Object> candidates, Predicate<T> filter) {
 		Map<String, Object> selected = new HashMap<>();
-		candidates.entrySet().stream().filter((candidate) -> filter.test((T) candidate))
-				.limit(3)
-				.forEach((entry) -> selected.put(entry.getKey(), entry.getValue()));
+		candidates.entrySet()
+			.stream()
+			.filter((candidate) -> filter.test((T) candidate))
+			.limit(3)
+			.forEach((entry) -> selected.put(entry.getKey(), entry.getValue()));
 		return selected;
 	}
 
 	@SuppressWarnings("unchecked")
 	private <T> List<Object> select(List<Object> candidates, Predicate<T> filter) {
-		return candidates.stream().filter((candidate) -> filter.test((T) candidate))
-				.limit(3).collect(Collectors.toList());
+		return candidates.stream().filter((candidate) -> filter.test((T) candidate)).limit(3).toList();
 	}
 
-	@Configuration
-	@Import({ JacksonAutoConfiguration.class,
-			HttpMessageConvertersAutoConfiguration.class, WebMvcAutoConfiguration.class,
-			DispatcherServletAutoConfiguration.class, EndpointAutoConfiguration.class,
-			WebEndpointAutoConfiguration.class,
-			WebMvcEndpointManagementContextConfiguration.class,
-			WebFluxEndpointManagementContextConfiguration.class,
-			PropertyPlaceholderAutoConfiguration.class, WebFluxAutoConfiguration.class,
-			HttpHandlerAutoConfiguration.class })
+	@Configuration(proxyBeanMethods = false)
+	@ImportAutoConfiguration({ JacksonAutoConfiguration.class, HttpMessageConvertersAutoConfiguration.class,
+			WebMvcAutoConfiguration.class, DispatcherServletAutoConfiguration.class, EndpointAutoConfiguration.class,
+			WebEndpointAutoConfiguration.class, WebMvcEndpointManagementContextConfiguration.class,
+			WebFluxEndpointManagementContextConfiguration.class, PropertyPlaceholderAutoConfiguration.class,
+			WebFluxAutoConfiguration.class, HttpHandlerAutoConfiguration.class,
+			JacksonEndpointAutoConfiguration.class })
 	static class BaseDocumentationConfiguration {
+
+		@Bean
+		static BeanPostProcessor endpointObjectMapperBeanPostProcessor() {
+			return new BeanPostProcessor() {
+
+				@Override
+				public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+					if (bean instanceof EndpointObjectMapper) {
+						return (EndpointObjectMapper) () -> ((EndpointObjectMapper) bean).get()
+							.enable(SerializationFeature.INDENT_OUTPUT);
+					}
+					return bean;
+				}
+
+			};
+		}
 
 	}
 
