@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -26,24 +26,32 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import org.springframework.aop.scope.ScopedProxyUtils;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.BeanFactoryUtils;
+import org.springframework.boot.actuate.endpoint.Access;
 import org.springframework.boot.actuate.endpoint.EndpointFilter;
+import org.springframework.boot.actuate.endpoint.EndpointId;
 import org.springframework.boot.actuate.endpoint.EndpointsSupplier;
 import org.springframework.boot.actuate.endpoint.ExposableEndpoint;
 import org.springframework.boot.actuate.endpoint.Operation;
+import org.springframework.boot.actuate.endpoint.OperationFilter;
 import org.springframework.boot.actuate.endpoint.invoke.OperationInvoker;
 import org.springframework.boot.actuate.endpoint.invoke.OperationInvokerAdvisor;
 import org.springframework.boot.actuate.endpoint.invoke.ParameterValueMapper;
 import org.springframework.boot.util.LambdaSafe;
 import org.springframework.context.ApplicationContext;
 import org.springframework.core.ResolvableType;
-import org.springframework.core.annotation.AnnotatedElementUtils;
-import org.springframework.core.annotation.AnnotationAttributes;
+import org.springframework.core.annotation.MergedAnnotation;
+import org.springframework.core.annotation.MergedAnnotations;
+import org.springframework.core.annotation.MergedAnnotations.SearchStrategy;
+import org.springframework.core.env.Environment;
 import org.springframework.util.Assert;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
@@ -54,8 +62,8 @@ import org.springframework.util.StringUtils;
  * {@link Endpoint @Endpoint} beans and {@link EndpointExtension @EndpointExtension} beans
  * in an application context.
  *
- * @param <E> The endpoint type
- * @param <O> The operation type
+ * @param <E> the endpoint type
+ * @param <O> the operation type
  * @author Andy Wilkinson
  * @author Stephane Nicoll
  * @author Phillip Webb
@@ -66,7 +74,9 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 
 	private final ApplicationContext applicationContext;
 
-	private final Collection<EndpointFilter<E>> filters;
+	private final Collection<EndpointFilter<E>> endpointFilters;
+
+	private final Collection<OperationFilter<O>> operationFilters;
 
 	private final DiscoveredOperationsFactory<O> operationsFactory;
 
@@ -79,32 +89,52 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 	 * @param applicationContext the source application context
 	 * @param parameterValueMapper the parameter value mapper
 	 * @param invokerAdvisors invoker advisors to apply
-	 * @param filters filters to apply
+	 * @param endpointFilters endpoint filters to apply
+	 * @deprecated since 3.4.0 for removal in 3.6.0 in favor of
+	 * {@link #EndpointDiscoverer(ApplicationContext, ParameterValueMapper, Collection, Collection, Collection)}
 	 */
-	public EndpointDiscoverer(ApplicationContext applicationContext,
-			ParameterValueMapper parameterValueMapper,
-			Collection<OperationInvokerAdvisor> invokerAdvisors,
-			Collection<EndpointFilter<E>> filters) {
-		Assert.notNull(applicationContext, "ApplicationContext must not be null");
-		Assert.notNull(parameterValueMapper, "ParameterValueMapper must not be null");
-		Assert.notNull(invokerAdvisors, "InvokerAdvisors must not be null");
-		Assert.notNull(filters, "Filters must not be null");
-		this.applicationContext = applicationContext;
-		this.filters = Collections.unmodifiableCollection(filters);
-		this.operationsFactory = getOperationsFactory(parameterValueMapper,
-				invokerAdvisors);
+	@Deprecated(since = "3.4.0", forRemoval = true)
+	public EndpointDiscoverer(ApplicationContext applicationContext, ParameterValueMapper parameterValueMapper,
+			Collection<OperationInvokerAdvisor> invokerAdvisors, Collection<EndpointFilter<E>> endpointFilters) {
+		this(applicationContext, parameterValueMapper, invokerAdvisors, endpointFilters, Collections.emptyList());
 	}
 
-	private DiscoveredOperationsFactory<O> getOperationsFactory(
-			ParameterValueMapper parameterValueMapper,
+	/**
+	 * Create a new {@link EndpointDiscoverer} instance.
+	 * @param applicationContext the source application context
+	 * @param parameterValueMapper the parameter value mapper
+	 * @param invokerAdvisors invoker advisors to apply
+	 * @param endpointFilters endpoint filters to apply
+	 * @param operationFilters operation filters to apply
+	 * @since 3.4.0
+	 */
+	public EndpointDiscoverer(ApplicationContext applicationContext, ParameterValueMapper parameterValueMapper,
+			Collection<OperationInvokerAdvisor> invokerAdvisors, Collection<EndpointFilter<E>> endpointFilters,
+			Collection<OperationFilter<O>> operationFilters) {
+		Assert.notNull(applicationContext, "'applicationContext' must not be null");
+		Assert.notNull(parameterValueMapper, "'parameterValueMapper' must not be null");
+		Assert.notNull(invokerAdvisors, "'invokerAdvisors' must not be null");
+		Assert.notNull(endpointFilters, "'endpointFilters' must not be null");
+		Assert.notNull(operationFilters, "'operationFilters' must not be null");
+		this.applicationContext = applicationContext;
+		this.endpointFilters = Collections.unmodifiableCollection(endpointFilters);
+		this.operationFilters = Collections.unmodifiableCollection(operationFilters);
+		this.operationsFactory = getOperationsFactory(parameterValueMapper, invokerAdvisors);
+	}
+
+	private DiscoveredOperationsFactory<O> getOperationsFactory(ParameterValueMapper parameterValueMapper,
 			Collection<OperationInvokerAdvisor> invokerAdvisors) {
-		return new DiscoveredOperationsFactory<O>(parameterValueMapper, invokerAdvisors) {
+		return new DiscoveredOperationsFactory<>(parameterValueMapper, invokerAdvisors) {
 
 			@Override
-			protected O createOperation(String endpointId,
-					DiscoveredOperationMethod operationMethod, OperationInvoker invoker) {
-				return EndpointDiscoverer.this.createOperation(endpointId,
-						operationMethod, invoker);
+			Collection<O> createOperations(EndpointId id, Object target) {
+				return super.createOperations(id, target);
+			}
+
+			@Override
+			protected O createOperation(EndpointId endpointId, DiscoveredOperationMethod operationMethod,
+					OperationInvoker invoker) {
+				return EndpointDiscoverer.this.createOperation(endpointId, operationMethod, invoker);
 			}
 
 		};
@@ -125,53 +155,50 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 	}
 
 	private Collection<EndpointBean> createEndpointBeans() {
-		Map<String, EndpointBean> byId = new LinkedHashMap<>();
-		String[] beanNames = BeanFactoryUtils.beanNamesForAnnotationIncludingAncestors(
-				this.applicationContext, Endpoint.class);
+		Map<EndpointId, EndpointBean> byId = new LinkedHashMap<>();
+		String[] beanNames = BeanFactoryUtils.beanNamesForAnnotationIncludingAncestors(this.applicationContext,
+				Endpoint.class);
 		for (String beanName : beanNames) {
-			EndpointBean endpointBean = createEndpointBean(beanName);
-			EndpointBean previous = byId.putIfAbsent(endpointBean.getId(), endpointBean);
-			Assert.state(previous == null,
-					() -> "Found two endpoints with the id '" + endpointBean.getId()
-							+ "': '" + endpointBean.getBeanName() + "' and '"
-							+ previous.getBeanName() + "'");
+			if (!ScopedProxyUtils.isScopedTarget(beanName)) {
+				EndpointBean endpointBean = createEndpointBean(beanName);
+				EndpointBean previous = byId.putIfAbsent(endpointBean.getId(), endpointBean);
+				Assert.state(previous == null, () -> "Found two endpoints with the id '" + endpointBean.getId() + "': '"
+						+ endpointBean.getBeanName() + "' and '" + previous.getBeanName() + "'");
+			}
 		}
 		return byId.values();
 	}
 
 	private EndpointBean createEndpointBean(String beanName) {
-		Object bean = this.applicationContext.getBean(beanName);
-		return new EndpointBean(beanName, bean);
+		Class<?> beanType = ClassUtils.getUserClass(this.applicationContext.getType(beanName, false));
+		Supplier<Object> beanSupplier = () -> this.applicationContext.getBean(beanName);
+		return new EndpointBean(this.applicationContext.getEnvironment(), beanName, beanType, beanSupplier);
 	}
 
 	private void addExtensionBeans(Collection<EndpointBean> endpointBeans) {
-		Map<?, EndpointBean> byType = endpointBeans.stream()
-				.collect(Collectors.toMap((bean) -> bean.getType(), (bean) -> bean));
-		String[] beanNames = BeanFactoryUtils.beanNamesForAnnotationIncludingAncestors(
-				this.applicationContext, EndpointExtension.class);
+		Map<EndpointId, EndpointBean> byId = endpointBeans.stream()
+			.collect(Collectors.toMap(EndpointBean::getId, Function.identity()));
+		String[] beanNames = BeanFactoryUtils.beanNamesForAnnotationIncludingAncestors(this.applicationContext,
+				EndpointExtension.class);
 		for (String beanName : beanNames) {
 			ExtensionBean extensionBean = createExtensionBean(beanName);
-			EndpointBean endpointBean = byType.get(extensionBean.getEndpointType());
-			Assert.state(endpointBean != null,
-					() -> ("Invalid extension '" + extensionBean.getBeanName()
-							+ "': no endpoint found with type '"
-							+ extensionBean.getEndpointType().getName() + "'"));
+			EndpointBean endpointBean = byId.get(extensionBean.getEndpointId());
+			Assert.state(endpointBean != null, () -> ("Invalid extension '" + extensionBean.getBeanName()
+					+ "': no endpoint found with id '" + extensionBean.getEndpointId() + "'"));
 			addExtensionBean(endpointBean, extensionBean);
 		}
 	}
 
 	private ExtensionBean createExtensionBean(String beanName) {
-		Object bean = this.applicationContext.getBean(beanName);
-		return new ExtensionBean(beanName, bean);
+		Class<?> beanType = ClassUtils.getUserClass(this.applicationContext.getType(beanName));
+		Supplier<Object> beanSupplier = () -> this.applicationContext.getBean(beanName);
+		return new ExtensionBean(this.applicationContext.getEnvironment(), beanName, beanType, beanSupplier);
 	}
 
-	private void addExtensionBean(EndpointBean endpointBean,
-			ExtensionBean extensionBean) {
+	private void addExtensionBean(EndpointBean endpointBean, ExtensionBean extensionBean) {
 		if (isExtensionExposed(endpointBean, extensionBean)) {
-			Assert.state(
-					isEndpointExposed(endpointBean) || isEndpointFiltered(endpointBean),
-					() -> "Endpoint bean '" + endpointBean.getBeanName()
-							+ "' cannot support the extension bean '"
+			Assert.state(isEndpointExposed(endpointBean) || isEndpointFiltered(endpointBean),
+					() -> "Endpoint bean '" + endpointBean.getBeanName() + "' cannot support the extension bean '"
 							+ extensionBean.getBeanName() + "'");
 			endpointBean.addExtension(extensionBean);
 		}
@@ -181,45 +208,60 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 		Set<E> endpoints = new LinkedHashSet<>();
 		for (EndpointBean endpointBean : endpointBeans) {
 			if (isEndpointExposed(endpointBean)) {
-				endpoints.add(convertToEndpoint(endpointBean));
+				E endpoint = convertToEndpoint(endpointBean);
+				if (isInvocable(endpoint)) {
+					endpoints.add(endpoint);
+				}
 			}
 		}
 		return Collections.unmodifiableSet(endpoints);
 	}
 
-	private E convertToEndpoint(EndpointBean endpointBean) {
-		MultiValueMap<OperationKey, O> indexed = new LinkedMultiValueMap<>();
-		String id = endpointBean.getId();
-		addOperations(indexed, id, endpointBean.getBean(), false);
-		if (endpointBean.getExtensions().size() > 1) {
-			String extensionBeans = endpointBean.getExtensions().stream()
-					.map(ExtensionBean::getBeanName).collect(Collectors.joining(", "));
-			throw new IllegalStateException(
-					"Found multiple extensions for the endpoint bean "
-							+ endpointBean.getBeanName() + " (" + extensionBeans + ")");
-		}
-		for (ExtensionBean extensionBean : endpointBean.getExtensions()) {
-			addOperations(indexed, id, extensionBean.getBean(), true);
-		}
-		assertNoDuplicateOperations(endpointBean, indexed);
-		List<O> operations = indexed.values().stream().map(this::getLast)
-				.filter(Objects::nonNull).collect(Collectors.collectingAndThen(
-						Collectors.toList(), Collections::unmodifiableList));
-		return createEndpoint(endpointBean.getBean(), id,
-				endpointBean.isEnabledByDefault(), operations);
+	/**
+	 * Returns whether the endpoint is invocable and should be included in the discovered
+	 * endpoints. The default implementation returns {@code true} if the endpoint has any
+	 * operations, otherwise {@code false}.
+	 * @param endpoint the endpoint to assess
+	 * @return {@code true} if the endpoint is invocable, otherwise {@code false}.
+	 * @since 3.4.0
+	 */
+	protected boolean isInvocable(E endpoint) {
+		return !endpoint.getOperations().isEmpty();
 	}
 
-	private void addOperations(MultiValueMap<OperationKey, O> indexed, String id,
+	private E convertToEndpoint(EndpointBean endpointBean) {
+		MultiValueMap<OperationKey, O> indexed = new LinkedMultiValueMap<>();
+		EndpointId id = endpointBean.getId();
+		addOperations(indexed, id, endpointBean.getDefaultAccess(), endpointBean.getBean(), false);
+		if (endpointBean.getExtensions().size() > 1) {
+			String extensionBeans = endpointBean.getExtensions()
+				.stream()
+				.map(ExtensionBean::getBeanName)
+				.collect(Collectors.joining(", "));
+			throw new IllegalStateException("Found multiple extensions for the endpoint bean "
+					+ endpointBean.getBeanName() + " (" + extensionBeans + ")");
+		}
+		for (ExtensionBean extensionBean : endpointBean.getExtensions()) {
+			addOperations(indexed, id, endpointBean.getDefaultAccess(), extensionBean.getBean(), true);
+		}
+		assertNoDuplicateOperations(endpointBean, indexed);
+		List<O> operations = indexed.values().stream().map(this::getLast).filter(Objects::nonNull).toList();
+		return createEndpoint(endpointBean.getBean(), id, endpointBean.getDefaultAccess(), operations);
+	}
+
+	private void addOperations(MultiValueMap<OperationKey, O> indexed, EndpointId id, Access defaultAccess,
 			Object target, boolean replaceLast) {
 		Set<OperationKey> replacedLast = new HashSet<>();
 		Collection<O> operations = this.operationsFactory.createOperations(id, target);
 		for (O operation : operations) {
-			OperationKey key = createOperationKey(operation);
-			O last = getLast(indexed.get(key));
-			if (replaceLast && replacedLast.add(key) && last != null) {
-				indexed.get(key).remove(last);
+			if (!isOperationFiltered(operation, id, defaultAccess)) {
+				OperationKey key = createOperationKey(operation);
+				O last = getLast(indexed.get(key));
+				if (replaceLast && replacedLast.add(key) && last != null) {
+					indexed.get(key).remove(last);
+				}
+				indexed.add(key, operation);
 			}
-			indexed.add(key, operation);
 		}
 	}
 
@@ -227,57 +269,54 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 		return CollectionUtils.isEmpty(list) ? null : list.get(list.size() - 1);
 	}
 
-	private void assertNoDuplicateOperations(EndpointBean endpointBean,
-			MultiValueMap<OperationKey, O> indexed) {
-		List<OperationKey> duplicates = indexed.entrySet().stream()
-				.filter((entry) -> entry.getValue().size() > 1).map(Map.Entry::getKey)
-				.collect(Collectors.toList());
+	private void assertNoDuplicateOperations(EndpointBean endpointBean, MultiValueMap<OperationKey, O> indexed) {
+		List<OperationKey> duplicates = indexed.entrySet()
+			.stream()
+			.filter((entry) -> entry.getValue().size() > 1)
+			.map(Map.Entry::getKey)
+			.toList();
 		if (!duplicates.isEmpty()) {
 			Set<ExtensionBean> extensions = endpointBean.getExtensions();
 			String extensionBeanNames = extensions.stream()
-					.map(ExtensionBean::getBeanName).collect(Collectors.joining(", "));
-			throw new IllegalStateException(
-					"Unable to map duplicate endpoint operations: "
-							+ duplicates.toString() + " to " + endpointBean.getBeanName()
-							+ (extensions.isEmpty() ? ""
-									: " (" + extensionBeanNames + ")"));
+				.map(ExtensionBean::getBeanName)
+				.collect(Collectors.joining(", "));
+			throw new IllegalStateException("Unable to map duplicate endpoint operations: " + duplicates + " to "
+					+ endpointBean.getBeanName() + (extensions.isEmpty() ? "" : " (" + extensionBeanNames + ")"));
 		}
 	}
 
-	private boolean isExtensionExposed(EndpointBean endpointBean,
-			ExtensionBean extensionBean) {
+	private boolean isExtensionExposed(EndpointBean endpointBean, ExtensionBean extensionBean) {
 		return isFilterMatch(extensionBean.getFilter(), endpointBean)
-				&& isExtensionExposed(extensionBean.getBean());
+				&& isExtensionTypeExposed(extensionBean.getBeanType());
 	}
 
 	/**
 	 * Determine if an extension bean should be exposed. Subclasses can override this
 	 * method to provide additional logic.
-	 * @param extensionBean the extension bean
+	 * @param extensionBeanType the extension bean type
 	 * @return {@code true} if the extension is exposed
 	 */
-	protected boolean isExtensionExposed(Object extensionBean) {
+	protected boolean isExtensionTypeExposed(Class<?> extensionBeanType) {
 		return true;
 	}
 
 	private boolean isEndpointExposed(EndpointBean endpointBean) {
-		return isFilterMatch(endpointBean.getFilter(), endpointBean)
-				&& !isEndpointFiltered(endpointBean)
-				&& isEndpointExposed(endpointBean.getBean());
+		return isFilterMatch(endpointBean.getFilter(), endpointBean) && !isEndpointFiltered(endpointBean)
+				&& isEndpointTypeExposed(endpointBean.getBeanType());
 	}
 
 	/**
 	 * Determine if an endpoint bean should be exposed. Subclasses can override this
 	 * method to provide additional logic.
-	 * @param endpointBean the endpoint bean
+	 * @param beanType the endpoint bean type
 	 * @return {@code true} if the endpoint is exposed
 	 */
-	protected boolean isEndpointExposed(Object endpointBean) {
+	protected boolean isEndpointTypeExposed(Class<?> beanType) {
 		return true;
 	}
 
 	private boolean isEndpointFiltered(EndpointBean endpointBean) {
-		for (EndpointFilter<E> filter : this.filters) {
+		for (EndpointFilter<E> filter : this.endpointFilters) {
 			if (!isFilterMatch(filter, endpointBean)) {
 				return true;
 			}
@@ -287,22 +326,19 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 
 	@SuppressWarnings("unchecked")
 	private boolean isFilterMatch(Class<?> filter, EndpointBean endpointBean) {
-		if (!isEndpointExposed(endpointBean.getBean())) {
+		if (!isEndpointTypeExposed(endpointBean.getBeanType())) {
 			return false;
 		}
 		if (filter == null) {
 			return true;
 		}
 		E endpoint = getFilterEndpoint(endpointBean);
-		Class<?> generic = ResolvableType.forClass(EndpointFilter.class, filter)
-				.resolveGeneric(0);
+		Class<?> generic = ResolvableType.forClass(EndpointFilter.class, filter).resolveGeneric(0);
 		if (generic == null || generic.isInstance(endpoint)) {
-			EndpointFilter<E> instance = (EndpointFilter<E>) BeanUtils
-					.instantiateClass(filter);
+			EndpointFilter<E> instance = (EndpointFilter<E>) BeanUtils.instantiateClass(filter);
 			return isFilterMatch(instance, endpoint);
 		}
 		return false;
-
 	}
 
 	private boolean isFilterMatch(EndpointFilter<E> filter, EndpointBean endpointBean) {
@@ -312,24 +348,37 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 	@SuppressWarnings("unchecked")
 	private boolean isFilterMatch(EndpointFilter<E> filter, E endpoint) {
 		return LambdaSafe.callback(EndpointFilter.class, filter, endpoint)
-				.withLogger(EndpointDiscoverer.class).invokeAnd((f) -> f.match(endpoint))
-				.get();
+			.withLogger(EndpointDiscoverer.class)
+			.invokeAnd((f) -> f.match(endpoint))
+			.get();
+	}
+
+	private boolean isOperationFiltered(Operation operation, EndpointId endpointId, Access defaultAccess) {
+		for (OperationFilter<O> filter : this.operationFilters) {
+			if (!isFilterMatch(filter, operation, endpointId, defaultAccess)) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	@SuppressWarnings("unchecked")
+	private boolean isFilterMatch(OperationFilter<O> filter, Operation operation, EndpointId endpointId,
+			Access defaultAccess) {
+		return LambdaSafe.callback(OperationFilter.class, filter, operation)
+			.withLogger(EndpointDiscoverer.class)
+			.invokeAnd((f) -> f.match(operation, endpointId, defaultAccess))
+			.get();
 	}
 
 	private E getFilterEndpoint(EndpointBean endpointBean) {
-		E endpoint = this.filterEndpoints.get(endpointBean);
-		if (endpoint == null) {
-			endpoint = createEndpoint(endpointBean.getBean(), endpointBean.getId(),
-					endpointBean.isEnabledByDefault(), Collections.emptySet());
-			this.filterEndpoints.put(endpointBean, endpoint);
-		}
-		return endpoint;
+		return this.filterEndpoints.computeIfAbsent(endpointBean, (key) -> createEndpoint(endpointBean.getBean(),
+				endpointBean.getId(), endpointBean.getDefaultAccess(), Collections.emptySet()));
 	}
 
 	@SuppressWarnings("unchecked")
 	protected Class<? extends E> getEndpointType() {
-		return (Class<? extends E>) ResolvableType
-				.forClass(EndpointDiscoverer.class, getClass()).resolveGeneric(0);
+		return (Class<? extends E>) ResolvableType.forClass(EndpointDiscoverer.class, getClass()).resolveGeneric(0);
 	}
 
 	/**
@@ -339,9 +388,24 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 	 * @param enabledByDefault if the endpoint is enabled by default
 	 * @param operations the endpoint operations
 	 * @return a created endpoint (a {@link DiscoveredEndpoint} is recommended)
+	 * @deprecated since 3.4.0 for removal in 3.6.0 in favor of
+	 * {@link #createEndpoint(Object, EndpointId, Access, Collection)}
 	 */
-	protected abstract E createEndpoint(Object endpointBean, String id,
-			boolean enabledByDefault, Collection<O> operations);
+	@Deprecated(since = "3.4.0", forRemoval = true)
+	protected E createEndpoint(Object endpointBean, EndpointId id, boolean enabledByDefault, Collection<O> operations) {
+		return createEndpoint(endpointBean, id, (enabledByDefault) ? Access.UNRESTRICTED : Access.NONE, operations);
+	}
+
+	/**
+	 * Factory method called to create the {@link ExposableEndpoint endpoint}.
+	 * @param endpointBean the source endpoint bean
+	 * @param id the ID of the endpoint
+	 * @param defaultAccess access to the endpoint that is permitted by default
+	 * @param operations the endpoint operations
+	 * @return a created endpoint (a {@link DiscoveredEndpoint} is recommended)
+	 */
+	protected abstract E createEndpoint(Object endpointBean, EndpointId id, Access defaultAccess,
+			Collection<O> operations);
 
 	/**
 	 * Factory method to create an {@link Operation endpoint operation}.
@@ -350,11 +414,11 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 	 * @param invoker the invoker to use
 	 * @return a created operation
 	 */
-	protected abstract O createOperation(String endpointId,
-			DiscoveredOperationMethod operationMethod, OperationInvoker invoker);
+	protected abstract O createOperation(EndpointId endpointId, DiscoveredOperationMethod operationMethod,
+			OperationInvoker invoker);
 
 	/**
-	 * Create a {@link OperationKey} for the given operation.
+	 * Create an {@link OperationKey} for the given operation.
 	 * @param operation the source operation
 	 * @return the operation key
 	 */
@@ -373,18 +437,13 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 		/**
 		 * Create a new {@link OperationKey} instance.
 		 * @param key the underlying key for the operation
-		 * @param description a human readable description of the key
+		 * @param description a human-readable description of the key
 		 */
 		public OperationKey(Object key, Supplier<String> description) {
-			Assert.notNull(key, "Key must not be null");
-			Assert.notNull(description, "Description must not be null");
+			Assert.notNull(key, "'key' must not be null");
+			Assert.notNull(description, "'description' must not be null");
 			this.key = key;
 			this.description = description;
-		}
-
-		@Override
-		public int hashCode() {
-			return this.key.hashCode();
 		}
 
 		@Override
@@ -396,6 +455,11 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 				return false;
 			}
 			return this.key.equals(((OperationKey) obj).key);
+		}
+
+		@Override
+		public int hashCode() {
+			return this.key.hashCode();
 		}
 
 		@Override
@@ -412,111 +476,123 @@ public abstract class EndpointDiscoverer<E extends ExposableEndpoint<O>, O exten
 
 		private final String beanName;
 
-		private final Object bean;
+		private final Class<?> beanType;
 
-		private final String id;
+		private final Supplier<Object> beanSupplier;
 
-		private boolean enabledByDefault;
+		private final EndpointId id;
+
+		private final Access defaultAccess;
 
 		private final Class<?> filter;
 
-		private Set<ExtensionBean> extensions = new LinkedHashSet<>();
+		private final Set<ExtensionBean> extensions = new LinkedHashSet<>();
 
-		EndpointBean(String beanName, Object bean) {
-			AnnotationAttributes attributes = AnnotatedElementUtils
-					.findMergedAnnotationAttributes(bean.getClass(), Endpoint.class, true,
-							true);
+		EndpointBean(Environment environment, String beanName, Class<?> beanType, Supplier<Object> beanSupplier) {
+			MergedAnnotation<Endpoint> annotation = MergedAnnotations.from(beanType, SearchStrategy.TYPE_HIERARCHY)
+				.get(Endpoint.class);
+			String id = annotation.getString("id");
+			Assert.state(StringUtils.hasText(id),
+					() -> "No @Endpoint id attribute specified for " + beanType.getName());
 			this.beanName = beanName;
-			this.bean = bean;
-			this.id = attributes.getString("id");
-			this.enabledByDefault = (Boolean) attributes.get("enableByDefault");
-			this.filter = getFilter(this.bean.getClass());
-			Assert.state(StringUtils.hasText(this.id),
-					"No @Endpoint id attribute specified for "
-							+ bean.getClass().getName());
+			this.beanType = beanType;
+			this.beanSupplier = beanSupplier;
+			this.id = EndpointId.of(environment, id);
+			boolean enabledByDefault = annotation.getBoolean("enableByDefault");
+			this.defaultAccess = enabledByDefault ? annotation.getEnum("defaultAccess", Access.class) : Access.NONE;
+			this.filter = getFilter(beanType);
 		}
 
-		public void addExtension(ExtensionBean extensionBean) {
+		void addExtension(ExtensionBean extensionBean) {
 			this.extensions.add(extensionBean);
 		}
 
-		public Set<ExtensionBean> getExtensions() {
+		Set<ExtensionBean> getExtensions() {
 			return this.extensions;
 		}
 
 		private Class<?> getFilter(Class<?> type) {
-			AnnotationAttributes attributes = AnnotatedElementUtils
-					.getMergedAnnotationAttributes(type, FilteredEndpoint.class);
-			if (attributes == null) {
-				return null;
-			}
-			return attributes.getClass("value");
+			return MergedAnnotations.from(type, SearchStrategy.TYPE_HIERARCHY)
+				.get(FilteredEndpoint.class)
+				.getValue(MergedAnnotation.VALUE, Class.class)
+				.orElse(null);
 		}
 
-		public String getBeanName() {
+		String getBeanName() {
 			return this.beanName;
 		}
 
-		public Object getBean() {
-			return this.bean;
+		Class<?> getBeanType() {
+			return this.beanType;
 		}
 
-		public String getId() {
+		Object getBean() {
+			return this.beanSupplier.get();
+		}
+
+		EndpointId getId() {
 			return this.id;
 		}
 
-		public Class<?> getType() {
-			return this.bean.getClass();
+		Access getDefaultAccess() {
+			return this.defaultAccess;
 		}
 
-		public boolean isEnabledByDefault() {
-			return this.enabledByDefault;
-		}
-
-		public Class<?> getFilter() {
+		Class<?> getFilter() {
 			return this.filter;
 		}
 
 	}
 
 	/**
-	 * Information about an {@link EndpointExtension EndpointExtension} bean.
+	 * Information about an {@link EndpointExtension @EndpointExtension} bean.
 	 */
 	private static class ExtensionBean {
 
 		private final String beanName;
 
-		private final Object bean;
+		private final Class<?> beanType;
 
-		private final Class<?> endpointType;
+		private final Supplier<Object> beanSupplier;
+
+		private final EndpointId endpointId;
 
 		private final Class<?> filter;
 
-		ExtensionBean(String beanName, Object bean) {
-			AnnotationAttributes attributes = AnnotatedElementUtils
-					.getMergedAnnotationAttributes(bean.getClass(),
-							EndpointExtension.class);
+		ExtensionBean(Environment environment, String beanName, Class<?> beanType, Supplier<Object> beanSupplier) {
 			this.beanName = beanName;
-			this.bean = bean;
-			this.endpointType = attributes.getClass("endpoint");
-			this.filter = attributes.getClass("filter");
-			Assert.state(!this.endpointType.equals(Void.class), () -> "Extension "
-					+ this.endpointType.getName() + " does not specify an endpoint");
+			this.beanType = beanType;
+			this.beanSupplier = beanSupplier;
+			MergedAnnotation<EndpointExtension> extensionAnnotation = MergedAnnotations
+				.from(beanType, SearchStrategy.TYPE_HIERARCHY)
+				.get(EndpointExtension.class);
+			Class<?> endpointType = extensionAnnotation.getClass("endpoint");
+			MergedAnnotation<Endpoint> endpointAnnotation = MergedAnnotations
+				.from(endpointType, SearchStrategy.TYPE_HIERARCHY)
+				.get(Endpoint.class);
+			Assert.state(endpointAnnotation.isPresent(),
+					() -> "Extension " + endpointType.getName() + " does not specify an endpoint");
+			this.endpointId = EndpointId.of(environment, endpointAnnotation.getString("id"));
+			this.filter = extensionAnnotation.getClass("filter");
 		}
 
-		public String getBeanName() {
+		String getBeanName() {
 			return this.beanName;
 		}
 
-		public Object getBean() {
-			return this.bean;
+		Class<?> getBeanType() {
+			return this.beanType;
 		}
 
-		public Class<?> getEndpointType() {
-			return this.endpointType;
+		Object getBean() {
+			return this.beanSupplier.get();
 		}
 
-		public Class<?> getFilter() {
+		EndpointId getEndpointId() {
+			return this.endpointId;
+		}
+
+		Class<?> getFilter() {
 			return this.filter;
 		}
 
