@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,17 +16,16 @@
 
 package org.springframework.boot.actuate.metrics;
 
-import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
 import io.micrometer.core.instrument.Meter;
 import io.micrometer.core.instrument.MeterRegistry;
@@ -34,14 +33,15 @@ import io.micrometer.core.instrument.Statistic;
 import io.micrometer.core.instrument.Tag;
 import io.micrometer.core.instrument.composite.CompositeMeterRegistry;
 
+import org.springframework.boot.actuate.endpoint.InvalidEndpointRequestException;
+import org.springframework.boot.actuate.endpoint.OperationResponseBody;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
 import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
 import org.springframework.boot.actuate.endpoint.annotation.Selector;
 import org.springframework.lang.Nullable;
-import org.springframework.util.Assert;
 
 /**
- * An {@link Endpoint} for exposing the metrics held by a {@link MeterRegistry}.
+ * An {@link Endpoint @Endpoint} for exposing the metrics held by a {@link MeterRegistry}.
  *
  * @author Jon Schneider
  * @author Phillip Webb
@@ -57,16 +57,15 @@ public class MetricsEndpoint {
 	}
 
 	@ReadOperation
-	public ListNamesResponse listNames() {
-		Set<String> names = new LinkedHashSet<>();
+	public MetricNamesDescriptor listNames() {
+		Set<String> names = new TreeSet<>();
 		collectNames(names, this.registry);
-		return new ListNamesResponse(names);
+		return new MetricNamesDescriptor(names);
 	}
 
 	private void collectNames(Set<String> names, MeterRegistry registry) {
-		if (registry instanceof CompositeMeterRegistry) {
-			((CompositeMeterRegistry) registry).getRegistries()
-					.forEach((member) -> collectNames(names, member));
+		if (registry instanceof CompositeMeterRegistry compositeMeterRegistry) {
+			compositeMeterRegistry.getRegistries().forEach((member) -> collectNames(names, member));
 		}
 		else {
 			registry.getMeters().stream().map(this::getName).forEach(names::add);
@@ -78,57 +77,68 @@ public class MetricsEndpoint {
 	}
 
 	@ReadOperation
-	public MetricResponse metric(@Selector String requiredMetricName,
-			@Nullable List<String> tag) {
-		Assert.isTrue(tag == null || tag.stream().allMatch((t) -> t.contains(":")),
-				"Each tag parameter must be in the form key:value");
+	public MetricDescriptor metric(@Selector String requiredMetricName, @Nullable List<String> tag) {
 		List<Tag> tags = parseTags(tag);
-		List<Meter> meters = new ArrayList<>();
-		collectMeters(meters, this.registry, requiredMetricName, tags);
+		Collection<Meter> meters = findFirstMatchingMeters(this.registry, requiredMetricName, tags);
 		if (meters.isEmpty()) {
 			return null;
 		}
 		Map<Statistic, Double> samples = getSamples(meters);
 		Map<String, Set<String>> availableTags = getAvailableTags(meters);
 		tags.forEach((t) -> availableTags.remove(t.getKey()));
-		return new MetricResponse(requiredMetricName, asList(samples, Sample::new),
-				asList(availableTags, AvailableTag::new));
+		Meter.Id meterId = meters.iterator().next().getId();
+		return new MetricDescriptor(requiredMetricName, meterId.getDescription(), meterId.getBaseUnit(),
+				asList(samples, Sample::new), asList(availableTags, AvailableTag::new));
 	}
 
 	private List<Tag> parseTags(List<String> tags) {
-		return tags == null ? Collections.emptyList() : tags.stream().map((t) -> {
-			String[] tagParts = t.split(":", 2);
-			return Tag.of(tagParts[0], tagParts[1]);
-		}).collect(Collectors.toList());
+		return (tags != null) ? tags.stream().map(this::parseTag).toList() : Collections.emptyList();
 	}
 
-	private void collectMeters(List<Meter> meters, MeterRegistry registry, String name,
+	private Tag parseTag(String tag) {
+		String[] parts = tag.split(":", 2);
+		if (parts.length != 2) {
+			throw new InvalidEndpointRequestException(
+					"Each tag parameter must be in the form 'key:value' but was: " + tag,
+					"Each tag parameter must be in the form 'key:value'");
+		}
+		return Tag.of(parts[0], parts[1]);
+	}
+
+	private Collection<Meter> findFirstMatchingMeters(MeterRegistry registry, String name, Iterable<Tag> tags) {
+		if (registry instanceof CompositeMeterRegistry compositeMeterRegistry) {
+			return findFirstMatchingMeters(compositeMeterRegistry, name, tags);
+		}
+		return registry.find(name).tags(tags).meters();
+	}
+
+	private Collection<Meter> findFirstMatchingMeters(CompositeMeterRegistry composite, String name,
 			Iterable<Tag> tags) {
-		if (registry instanceof CompositeMeterRegistry) {
-			((CompositeMeterRegistry) registry).getRegistries()
-					.forEach((member) -> collectMeters(meters, member, name, tags));
-		}
-		else {
-			meters.addAll(registry.find(name).tags(tags).meters());
-		}
+		return composite.getRegistries()
+			.stream()
+			.map((registry) -> findFirstMatchingMeters(registry, name, tags))
+			.filter((matching) -> !matching.isEmpty())
+			.findFirst()
+			.orElse(Collections.emptyList());
 	}
 
-	private Map<Statistic, Double> getSamples(List<Meter> meters) {
+	private Map<Statistic, Double> getSamples(Collection<Meter> meters) {
 		Map<Statistic, Double> samples = new LinkedHashMap<>();
 		meters.forEach((meter) -> mergeMeasurements(samples, meter));
 		return samples;
 	}
 
 	private void mergeMeasurements(Map<Statistic, Double> samples, Meter meter) {
-		meter.measure().forEach((measurement) -> samples.merge(measurement.getStatistic(),
-				measurement.getValue(), mergeFunction(measurement.getStatistic())));
+		meter.measure()
+			.forEach((measurement) -> samples.merge(measurement.getStatistic(), measurement.getValue(),
+					mergeFunction(measurement.getStatistic())));
 	}
 
 	private BiFunction<Double, Double, Double> mergeFunction(Statistic statistic) {
 		return Statistic.MAX.equals(statistic) ? Double::max : Double::sum;
 	}
 
-	private Map<String, Set<String>> getAvailableTags(List<Meter> meters) {
+	private Map<String, Set<String>> getAvailableTags(Collection<Meter> meters) {
 		Map<String, Set<String>> availableTags = new HashMap<>();
 		meters.forEach((meter) -> mergeAvailableTags(availableTags, meter));
 		return availableTags;
@@ -149,47 +159,60 @@ public class MetricsEndpoint {
 	}
 
 	private <K, V, T> List<T> asList(Map<K, V> map, BiFunction<K, V, T> mapper) {
-		return map.entrySet().stream()
-				.map((entry) -> mapper.apply(entry.getKey(), entry.getValue()))
-				.collect(Collectors.toCollection(ArrayList::new));
+		return map.entrySet().stream().map((entry) -> mapper.apply(entry.getKey(), entry.getValue())).toList();
 	}
 
 	/**
-	 * Response payload for a metric name listing.
+	 * Description of metric names.
 	 */
-	public static final class ListNamesResponse {
+	public static final class MetricNamesDescriptor implements OperationResponseBody {
 
 		private final Set<String> names;
 
-		ListNamesResponse(Set<String> names) {
+		MetricNamesDescriptor(Set<String> names) {
 			this.names = names;
 		}
 
 		public Set<String> getNames() {
 			return this.names;
 		}
+
 	}
 
 	/**
-	 * Response payload for a metric name selector.
+	 * Description of a metric.
 	 */
-	public static final class MetricResponse {
+	public static final class MetricDescriptor implements OperationResponseBody {
 
 		private final String name;
+
+		private final String description;
+
+		private final String baseUnit;
 
 		private final List<Sample> measurements;
 
 		private final List<AvailableTag> availableTags;
 
-		MetricResponse(String name, List<Sample> measurements,
+		MetricDescriptor(String name, String description, String baseUnit, List<Sample> measurements,
 				List<AvailableTag> availableTags) {
 			this.name = name;
+			this.description = description;
+			this.baseUnit = baseUnit;
 			this.measurements = measurements;
 			this.availableTags = availableTags;
 		}
 
 		public String getName() {
 			return this.name;
+		}
+
+		public String getDescription() {
+			return this.description;
+		}
+
+		public String getBaseUnit() {
+			return this.baseUnit;
 		}
 
 		public List<Sample> getMeasurements() {
@@ -203,7 +226,7 @@ public class MetricsEndpoint {
 	}
 
 	/**
-	 * A set of tags for further dimensional drilldown and their potential values.
+	 * A set of tags for further dimensional drill-down and their potential values.
 	 */
 	public static final class AvailableTag {
 
@@ -223,6 +246,7 @@ public class MetricsEndpoint {
 		public Set<String> getValues() {
 			return this.values;
 		}
+
 	}
 
 	/**
@@ -249,8 +273,7 @@ public class MetricsEndpoint {
 
 		@Override
 		public String toString() {
-			return "MeasurementSample{" + "statistic=" + this.statistic + ", value="
-					+ this.value + '}';
+			return "MeasurementSample{statistic=" + this.statistic + ", value=" + this.value + '}';
 		}
 
 	}
