@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,30 +16,46 @@
 
 package org.springframework.boot.autoconfigure.orm.jpa;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Consumer;
 import java.util.function.Supplier;
 
 import javax.sql.DataSource;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy;
 import org.hibernate.boot.model.naming.ImplicitNamingStrategy;
 import org.hibernate.boot.model.naming.PhysicalNamingStrategy;
+import org.hibernate.cfg.ManagedBeanSettings;
 
+import org.springframework.aot.hint.MemberCategory;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.RuntimeHintsRegistrar;
+import org.springframework.aot.hint.TypeHint;
+import org.springframework.aot.hint.TypeHint.Builder;
+import org.springframework.aot.hint.TypeReference;
 import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnSingleCandidate;
-import org.springframework.boot.autoconfigure.transaction.TransactionManagerCustomizers;
+import org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaConfiguration.HibernateRuntimeHints;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.jdbc.SchemaManagementProvider;
 import org.springframework.boot.jdbc.metadata.CompositeDataSourcePoolMetadataProvider;
 import org.springframework.boot.jdbc.metadata.DataSourcePoolMetadata;
 import org.springframework.boot.jdbc.metadata.DataSourcePoolMetadataProvider;
+import org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy;
 import org.springframework.boot.orm.jpa.hibernate.SpringJtaPlatform;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.ImportRuntimeHints;
+import org.springframework.jdbc.support.SQLExceptionTranslator;
 import org.springframework.jndi.JndiLocatorDelegate;
+import org.springframework.orm.hibernate5.SpringBeanContainer;
 import org.springframework.orm.jpa.vendor.AbstractJpaVendorAdapter;
 import org.springframework.orm.jpa.vendor.HibernateJpaVendorAdapter;
 import org.springframework.transaction.jta.JtaTransactionManager;
@@ -53,10 +69,12 @@ import org.springframework.util.ClassUtils;
  * @author Manuel Doninger
  * @author Andy Wilkinson
  * @author Stephane Nicoll
- * @since 2.0.0
+ * @author Moritz Halbritter
  */
-@Configuration
+@Configuration(proxyBeanMethods = false)
+@EnableConfigurationProperties(HibernateProperties.class)
 @ConditionalOnSingleCandidate(DataSource.class)
+@ImportRuntimeHints(HibernateRuntimeHints.class)
 class HibernateJpaConfiguration extends JpaBaseConfiguration {
 
 	private static final Log logger = LogFactory.getLog(HibernateJpaConfiguration.class);
@@ -72,59 +90,66 @@ class HibernateJpaConfiguration extends JpaBaseConfiguration {
 			"org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform",
 			"org.hibernate.service.jta.platform.internal.NoJtaPlatform" };
 
-	/**
-	 * {@code WebSphereExtendedJtaPlatform} implementations for various Hibernate
-	 * versions.
-	 */
-	private static final String[] WEBSPHERE_JTA_PLATFORM_CLASSES = {
-			"org.hibernate.engine.transaction.jta.platform.internal.WebSphereExtendedJtaPlatform",
-			"org.hibernate.service.jta.platform.internal.WebSphereExtendedJtaPlatform" };
+	private final HibernateProperties hibernateProperties;
 
 	private final HibernateDefaultDdlAutoProvider defaultDdlAutoProvider;
 
-	private DataSourcePoolMetadataProvider poolMetadataProvider;
+	private final DataSourcePoolMetadataProvider poolMetadataProvider;
 
-	private final PhysicalNamingStrategy physicalNamingStrategy;
-
-	private final ImplicitNamingStrategy implicitNamingStrategy;
+	private final ObjectProvider<SQLExceptionTranslator> sqlExceptionTranslator;
 
 	private final List<HibernatePropertiesCustomizer> hibernatePropertiesCustomizers;
 
 	HibernateJpaConfiguration(DataSource dataSource, JpaProperties jpaProperties,
-			ObjectProvider<JtaTransactionManager> jtaTransactionManager,
-			ObjectProvider<TransactionManagerCustomizers> transactionManagerCustomizers,
+			ConfigurableListableBeanFactory beanFactory, ObjectProvider<JtaTransactionManager> jtaTransactionManager,
+			HibernateProperties hibernateProperties,
 			ObjectProvider<Collection<DataSourcePoolMetadataProvider>> metadataProviders,
-			ObjectProvider<List<SchemaManagementProvider>> providers,
+			ObjectProvider<SchemaManagementProvider> providers,
 			ObjectProvider<PhysicalNamingStrategy> physicalNamingStrategy,
 			ObjectProvider<ImplicitNamingStrategy> implicitNamingStrategy,
-			ObjectProvider<List<HibernatePropertiesCustomizer>> hibernatePropertiesCustomizers) {
-		super(dataSource, jpaProperties, jtaTransactionManager,
-				transactionManagerCustomizers);
-		this.defaultDdlAutoProvider = new HibernateDefaultDdlAutoProvider(
-				providers.getIfAvailable(Collections::emptyList));
-		this.poolMetadataProvider = new CompositeDataSourcePoolMetadataProvider(
-				metadataProviders.getIfAvailable());
-		this.physicalNamingStrategy = physicalNamingStrategy.getIfAvailable();
-		this.implicitNamingStrategy = implicitNamingStrategy.getIfAvailable();
-		this.hibernatePropertiesCustomizers = hibernatePropertiesCustomizers
-				.getIfAvailable(() -> Collections.emptyList());
+			ObjectProvider<SQLExceptionTranslator> sqlExceptionTranslator,
+			ObjectProvider<HibernatePropertiesCustomizer> hibernatePropertiesCustomizers) {
+		super(dataSource, jpaProperties, jtaTransactionManager);
+		this.hibernateProperties = hibernateProperties;
+		this.defaultDdlAutoProvider = new HibernateDefaultDdlAutoProvider(providers);
+		this.poolMetadataProvider = new CompositeDataSourcePoolMetadataProvider(metadataProviders.getIfAvailable());
+		this.sqlExceptionTranslator = sqlExceptionTranslator;
+		this.hibernatePropertiesCustomizers = determineHibernatePropertiesCustomizers(
+				physicalNamingStrategy.getIfAvailable(), implicitNamingStrategy.getIfAvailable(), beanFactory,
+				hibernatePropertiesCustomizers.orderedStream().toList());
+	}
+
+	private List<HibernatePropertiesCustomizer> determineHibernatePropertiesCustomizers(
+			PhysicalNamingStrategy physicalNamingStrategy, ImplicitNamingStrategy implicitNamingStrategy,
+			ConfigurableListableBeanFactory beanFactory,
+			List<HibernatePropertiesCustomizer> hibernatePropertiesCustomizers) {
+		List<HibernatePropertiesCustomizer> customizers = new ArrayList<>();
+		if (ClassUtils.isPresent("org.hibernate.resource.beans.container.spi.BeanContainer",
+				getClass().getClassLoader())) {
+			customizers.add((properties) -> properties.put(ManagedBeanSettings.BEAN_CONTAINER,
+					new SpringBeanContainer(beanFactory)));
+		}
+		if (physicalNamingStrategy != null || implicitNamingStrategy != null) {
+			customizers
+				.add(new NamingStrategiesHibernatePropertiesCustomizer(physicalNamingStrategy, implicitNamingStrategy));
+		}
+		customizers.addAll(hibernatePropertiesCustomizers);
+		return customizers;
 	}
 
 	@Override
 	protected AbstractJpaVendorAdapter createJpaVendorAdapter() {
-		return new HibernateJpaVendorAdapter();
+		HibernateJpaVendorAdapter adapter = new HibernateJpaVendorAdapter();
+		this.sqlExceptionTranslator.ifUnique(adapter.getJpaDialect()::setJdbcExceptionTranslator);
+		return adapter;
 	}
 
 	@Override
 	protected Map<String, Object> getVendorProperties() {
-		Supplier<String> defaultDdlMode = () -> this.defaultDdlAutoProvider
-				.getDefaultDdlAuto(getDataSource());
-		return new LinkedHashMap<>(getProperties()
-				.getHibernateProperties(new HibernateSettings().ddlAuto(defaultDdlMode)
-						.implicitNamingStrategy(this.implicitNamingStrategy)
-						.physicalNamingStrategy(this.physicalNamingStrategy)
-						.hibernatePropertiesCustomizers(
-								this.hibernatePropertiesCustomizers)));
+		Supplier<String> defaultDdlMode = () -> this.defaultDdlAutoProvider.getDefaultDdlAuto(getDataSource());
+		return new LinkedHashMap<>(this.hibernateProperties.determineHibernateProperties(
+				getProperties().getProperties(), new HibernateSettings().ddlAuto(defaultDdlMode)
+					.hibernatePropertiesCustomizers(this.hibernatePropertiesCustomizers)));
 	}
 
 	@Override
@@ -138,67 +163,46 @@ class HibernateJpaConfiguration extends JpaBaseConfiguration {
 		}
 	}
 
-	private void configureJtaPlatform(Map<String, Object> vendorProperties)
-			throws LinkageError {
+	private void configureJtaPlatform(Map<String, Object> vendorProperties) throws LinkageError {
 		JtaTransactionManager jtaTransactionManager = getJtaTransactionManager();
-		if (jtaTransactionManager != null) {
-			if (runningOnWebSphere()) {
-				// We can never use SpringJtaPlatform on WebSphere as
-				// WebSphereUowTransactionManager has a null TransactionManager
-				// which will cause Hibernate to NPE
-				configureWebSphereTransactionPlatform(vendorProperties);
-			}
-			else {
-				configureSpringJtaPlatform(vendorProperties, jtaTransactionManager);
-			}
-		}
-		else {
+		// Make sure Hibernate doesn't attempt to auto-detect a JTA platform
+		if (jtaTransactionManager == null) {
 			vendorProperties.put(JTA_PLATFORM, getNoJtaPlatformManager());
+		}
+		// As of Hibernate 5.2, Hibernate can fully integrate with the WebSphere
+		// transaction manager on its own.
+		else if (!runningOnWebSphere()) {
+			configureSpringJtaPlatform(vendorProperties, jtaTransactionManager);
 		}
 	}
 
-	private void configureProviderDisablesAutocommit(
-			Map<String, Object> vendorProperties) {
+	private void configureProviderDisablesAutocommit(Map<String, Object> vendorProperties) {
 		if (isDataSourceAutoCommitDisabled() && !isJta()) {
 			vendorProperties.put(PROVIDER_DISABLES_AUTOCOMMIT, "true");
 		}
 	}
 
 	private boolean isDataSourceAutoCommitDisabled() {
-		DataSourcePoolMetadata poolMetadata = this.poolMetadataProvider
-				.getDataSourcePoolMetadata(getDataSource());
-		return poolMetadata != null
-				&& Boolean.FALSE.equals(poolMetadata.getDefaultAutoCommit());
+		DataSourcePoolMetadata poolMetadata = this.poolMetadataProvider.getDataSourcePoolMetadata(getDataSource());
+		return poolMetadata != null && Boolean.FALSE.equals(poolMetadata.getDefaultAutoCommit());
 	}
 
 	private boolean runningOnWebSphere() {
-		return ClassUtils.isPresent(
-				"com.ibm.websphere.jtaextensions.ExtendedJTATransaction",
+		return ClassUtils.isPresent("com.ibm.websphere.jtaextensions.ExtendedJTATransaction",
 				getClass().getClassLoader());
-	}
-
-	private void configureWebSphereTransactionPlatform(
-			Map<String, Object> vendorProperties) {
-		vendorProperties.put(JTA_PLATFORM, getWebSphereJtaPlatformManager());
-	}
-
-	private Object getWebSphereJtaPlatformManager() {
-		return getJtaPlatformManager(WEBSPHERE_JTA_PLATFORM_CLASSES);
 	}
 
 	private void configureSpringJtaPlatform(Map<String, Object> vendorProperties,
 			JtaTransactionManager jtaTransactionManager) {
 		try {
-			vendorProperties.put(JTA_PLATFORM,
-					new SpringJtaPlatform(jtaTransactionManager));
+			vendorProperties.put(JTA_PLATFORM, new SpringJtaPlatform(jtaTransactionManager));
 		}
 		catch (LinkageError ex) {
 			// NoClassDefFoundError can happen if Hibernate 4.2 is used and some
 			// containers (e.g. JBoss EAP 6) wrap it in the superclass LinkageError
 			if (!isUsingJndi()) {
-				throw new IllegalStateException("Unable to set Hibernate JTA "
-						+ "platform, are you using the correct "
-						+ "version of Hibernate?", ex);
+				throw new IllegalStateException(
+						"Unable to set Hibernate JTA platform, are you using the correct version of Hibernate?", ex);
 			}
 			// Assume that Hibernate will use JNDI
 			if (logger.isDebugEnabled()) {
@@ -217,19 +221,56 @@ class HibernateJpaConfiguration extends JpaBaseConfiguration {
 	}
 
 	private Object getNoJtaPlatformManager() {
-		return getJtaPlatformManager(NO_JTA_PLATFORM_CLASSES);
-	}
-
-	private Object getJtaPlatformManager(String[] candidates) {
-		for (String candidate : candidates) {
+		for (String candidate : NO_JTA_PLATFORM_CLASSES) {
 			try {
-				return Class.forName(candidate).newInstance();
+				return Class.forName(candidate).getDeclaredConstructor().newInstance();
 			}
 			catch (Exception ex) {
 				// Continue searching
 			}
 		}
-		throw new IllegalStateException("Could not configure JTA platform");
+		throw new IllegalStateException(
+				"No available JtaPlatform candidates amongst " + Arrays.toString(NO_JTA_PLATFORM_CLASSES));
+	}
+
+	private static class NamingStrategiesHibernatePropertiesCustomizer implements HibernatePropertiesCustomizer {
+
+		private final PhysicalNamingStrategy physicalNamingStrategy;
+
+		private final ImplicitNamingStrategy implicitNamingStrategy;
+
+		NamingStrategiesHibernatePropertiesCustomizer(PhysicalNamingStrategy physicalNamingStrategy,
+				ImplicitNamingStrategy implicitNamingStrategy) {
+			this.physicalNamingStrategy = physicalNamingStrategy;
+			this.implicitNamingStrategy = implicitNamingStrategy;
+		}
+
+		@Override
+		public void customize(Map<String, Object> hibernateProperties) {
+			if (this.physicalNamingStrategy != null) {
+				hibernateProperties.put("hibernate.physical_naming_strategy", this.physicalNamingStrategy);
+			}
+			if (this.implicitNamingStrategy != null) {
+				hibernateProperties.put("hibernate.implicit_naming_strategy", this.implicitNamingStrategy);
+			}
+		}
+
+	}
+
+	static class HibernateRuntimeHints implements RuntimeHintsRegistrar {
+
+		private static final Consumer<Builder> INVOKE_DECLARED_CONSTRUCTORS = TypeHint
+			.builtWith(MemberCategory.INVOKE_DECLARED_CONSTRUCTORS);
+
+		@Override
+		public void registerHints(RuntimeHints hints, ClassLoader classLoader) {
+			for (String noJtaPlatformClass : NO_JTA_PLATFORM_CLASSES) {
+				hints.reflection().registerType(TypeReference.of(noJtaPlatformClass), INVOKE_DECLARED_CONSTRUCTORS);
+			}
+			hints.reflection().registerType(SpringImplicitNamingStrategy.class, INVOKE_DECLARED_CONSTRUCTORS);
+			hints.reflection().registerType(CamelCaseToUnderscoresNamingStrategy.class, INVOKE_DECLARED_CONSTRUCTORS);
+		}
+
 	}
 
 }
